opam-version: "2.0"
version: "0.1.1"
maintainer: "komamitsu@gmail.com"
authors: ["Mitsunori Komatsu"]
homepage: "https://github.com/komamitsu/oraft"
bug-reports: "https://github.com/komamitsu/oraft/issues"
dev-repo: "git+https://github.com/komamitsu/oraft.git"
description: "Raft consensus algorithm implemented in OCaml"
synopsis: "Raft consensus algorithm implemented in OCaml"
license: "Apache"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
    "ocaml" {>= "4.05.0"}
    "dune"
    "core" {>= "v0.9.0"}
    "cohttp-lwt-unix"  {< "3.0.0"}
    "yojson"
    "ppx_deriving"
    "ppx_deriving_yojson"
    "ounit" {with-test}
    "fileutils" {with-test}
]

