opam-version: "2.0"
version: "0.2.0"
maintainer: "komamitsu@gmail.com"
authors: ["Mitsunori Komatsu"]
homepage: "https://github.com/komamitsu/oraft"
bug-reports: "https://github.com/komamitsu/oraft/issues"
dev-repo: "git+https://github.com/komamitsu/oraft.git"
description: "Raft consensus algorithm implemented in OCaml"
synopsis: "Raft consensus algorithm implemented in OCaml"
license: "Apache-2.0"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
    "ocaml" {>= "4.05.0"}
    "dune" {>= "2.0"}
    "core" {>= "v0.9.0"}
    "cohttp-lwt-unix"  {>= "5.0.0"}
    "yojson"
    "ppx_deriving"
    "ppx_deriving_yojson" {>= "3.6.0"}
    "ounit" {with-test}
    "fileutils" {with-test}
]

